# Lidar_Area

./: .gitignore  CMakeLists.txt  package.xml
config/: grids_config.rviz
data/: calibration_tf.txt  camera_calibration.yaml
data/parameters/: extrinsic.txt  intrinsic.txt
include/: detect.cpp  detect.hpp  lidar_area.cpp  lidar_area.h
launch/: area.launch
msg/: Grid.msg
ros_test/: CMakeLists.txt  Readme.md  package.xml
ros_test/src/: lidar_area.cpp  lidar_area.h  main.cpp
script/: lidar_area.py
src/: camera_position.cpp  main.cpp
